--- a/Galactic.Identity.Okta/Galactic.Identity.Okta.csproj
+++ b/Galactic.Identity.Okta/Galactic.Identity.Okta.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ReleaseVersion>2.0.0.0</ReleaseVersion>
+	<Description>A robust class library that allows you to easily query and manipulate users and groups in Okta.</Description>
+	<PackageTags>Galactic;identity;directory system;group;user;okta</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
