--- a/Galactic.EventLog.Sql/Galactic.EventLog.Sql.csproj
+++ b/Galactic.EventLog.Sql/Galactic.EventLog.Sql.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ReleaseVersion>2.0.0.0</ReleaseVersion>
+	<Description>A class library for logging application events to a SQL database.</Description>
+	<PackageTags>Galactic;event;logging;sql</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
