--- a/Galactic.Identity.ActiveDirectory/Galactic.Identity.ActiveDirectory.csproj
+++ b/Galactic.Identity.ActiveDirectory/Galactic.Identity.ActiveDirectory.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ReleaseVersion>2.0.0.0</ReleaseVersion>
+	<Description>A fast and robust class library that allows you to easily query and manipulate users and groups in Active Directory.</Description>
+	<PackageTags>Galactic;identity;directory system;group;user;active directory;active;directory;ad</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
