--- a/Galactic.PowerShell/Galactic.PowerShell.csproj
+++ b/Galactic.PowerShell/Galactic.PowerShell.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ReleaseVersion>2.0.0.0</ReleaseVersion>
+	<Description>A class library for leveraging PowerShell from within an application. Supports synchronous and asynchronous commands with built-in runspace management.</Description>
+	<PackageTags>Galactic;scripting;powershell</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
