--- a/Galactic.Sql.MSSql/Galactic.Sql.MSSql.csproj
+++ b/Galactic.Sql.MSSql/Galactic.Sql.MSSql.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ReleaseVersion>2.0.0.0</ReleaseVersion>
+	<Description>A class library for querying and manipulating Microsoft SQL databases.</Description>
+	<PackageTags>Galactic;sql;database;mssql</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
