--- a/Galactic.Sql.Oracle/Galactic.Sql.Oracle.csproj
+++ b/Galactic.Sql.Oracle/Galactic.Sql.Oracle.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ReleaseVersion>2.0.0.0</ReleaseVersion>
+	<Description>A class library for querying and manipulating Oracle databases.</Description>
+	<PackageTags>Galactic;sql;database;oracle</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
