--- a/Galactic.Sql/Galactic.Sql.csproj
+++ b/Galactic.Sql/Galactic.Sql.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ReleaseVersion>2.0.0.0</ReleaseVersion>
+	<Description>A base class library for querying and manipulating SQL databases.</Description>
+	<PackageTags>Galactic;sql;database</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
