Package build fixes.
Removed unused PostBuild.bat
Changed target location for built Nuget packages to the NugetPackages directory off of the solution root.
(This gets around "package" folders being ignored by the .gitignore file)

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,5 +1,5 @@
 <Project>
 	<Target Name="PostBuild" AfterTargets="Pack">
-	  <Exec Command="move $(ProjectDir)bin\$(ConfigurationName)\*.nupkg $(SolutionDir)packages\" />
+	  <Exec Command="move $(ProjectDir)bin\$(ConfigurationName)\*.nupkg $(SolutionDir)NugetPackages\" />
 	</Target>
 </Project>
