Package updates and new post build copy logic.
Updated package dependencies in the solution.
Switched from a platform specific postbuild command to move nuget packages to a central solution directory, to a cross platform method that copies the packages using a dot net copy task in MSBuild.

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,5 +1,9 @@
-<Project>
+﻿<Project>
 	<Target Name="PostBuild" AfterTargets="Pack">
-	  <Exec Command="move $(ProjectDir)bin\$(ConfigurationName)\*.nupkg $(SolutionDir)NugetPackages\" />
+	  <!--<Exec Command="cp $(ProjectDir)bin/$(ConfigurationName)/*.nupkg $(SolutionDir)NugetPackages/" />-->
+	  <ItemGroup>
+		  <NugetPackages Include="$(ProjectDir)bin/$(ConfigurationName)\*.nupkg" />
+      </ItemGroup>
+	  <Copy SourceFiles="@(NugetPackages)" DestinationFolder="$(SolutionDir)NugetPackages\" SkipUnchangedFiles="true" />
 	</Target>
 </Project>
