Switched to move instead of copy.
Switched to using move instead of copy for the postbuild Nuget package move.

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -3,6 +3,6 @@
 	  <ItemGroup>
 		  <NugetPackages Include="$(ProjectDir)bin/$(ConfigurationName)\*.nupkg" />
       </ItemGroup>
-	  <Copy SourceFiles="@(NugetPackages)" DestinationFolder="$(SolutionDir)NugetPackages\" SkipUnchangedFiles="true" />
+	  <Move SourceFiles="@(NugetPackages)" DestinationFolder="$(SolutionDir)NugetPackages\" />
 	</Target>
 </Project>
