Changed solution build for conformant versioning.
Changed the way we develop the version for NuGet and others so that we generate something that conforms to the spec.

<Major>.<Minor>.<Patch>.<Revision><Optional:Suffix>

For us:
2.<Year>.<DayOfYear>.<MinutesSinceStartOfDay><Optional:-beta>

Example:
(Release)
2.2022.140.85
(Debug)
2.2022.140.85-beta

All project versions are static at 2.0.0.0. These just represent that we're working on this major version, irregardless of the actual build number.

--- a/Galactic.NoSql/Galactic.NoSql.csproj
+++ b/Galactic.NoSql/Galactic.NoSql.csproj
@@ -7,6 +7,9 @@
 	<PackageTags>Galactic;nosql</PackageTags>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Galactic.EventLog\Galactic.EventLog.csproj" />
   </ItemGroup>
