--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,24 +1,19 @@
-<Project>
+﻿<Project>
 
 	<PropertyGroup>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<Authors>galacticapi</Authors>
+		<Authors>Galactic API</Authors>
 		<Copyright>Copyright (c) 2022 Galactic API Team</Copyright>
 		<PackageProjectUrl>https://galacticapi.github.io/</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/GalacticAPI/Galactic</RepositoryUrl>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<PackageIcon>GalacticAPIIcon128.png</PackageIcon>
+		<VersionPrefix>2.$([System.DateTime]::UtcNow.ToString("yyyy")).$([System.DateTime]::UtcNow.DayOfYear).$([System.DateTime]::UtcNow.TimeOfDay.TotalMinutes.ToString("00"))</VersionPrefix>
 	</PropertyGroup>
 
 	<PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-		<VersionPrefix>2.0.0.0</VersionPrefix>
-		<VersionSuffix>beta-build$([System.DateTime]::Now.ToString(yyyyMMddHHmm))</VersionSuffix>
-	</PropertyGroup>
-
-	<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-		<VersionPrefix>2.0.0.0</VersionPrefix>
-		<VersionSuffix>release</VersionSuffix>
+		<VersionSuffix>beta</VersionSuffix>
 	</PropertyGroup>
 
   <ItemGroup>
