--- a/Galactic.EventLog.File/Galactic.EventLog.File.csproj
+++ b/Galactic.EventLog.File/Galactic.EventLog.File.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ReleaseVersion>2.0.0.0</ReleaseVersion>
   </PropertyGroup>
 
   <ItemGroup>
