--- a/Galactic.Identity.GoogleWorkspace/Galactic.Identity.GoogleWorkspace.csproj
+++ b/Galactic.Identity.GoogleWorkspace/Galactic.Identity.GoogleWorkspace.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <Description>A robust class library that allows you to easily query and manipulate users and groups in Google Workspace.</Description>
 	<PackageTags>Galactic;identity;directory system;group;user;google workspace;google;workspace;gsuite</PackageTags>
+	<ReleaseVersion>2.0.0.0</ReleaseVersion>
   </PropertyGroup>
 
   <ItemGroup>
